# vectorless

./: .gitignore  DEPLOY.md  DEPLOYMENT.md  IMPROVEMENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy-web.yml  publish-py-sdk.yml  publish-ts-sdk.yml
apps/api/: .env.example  package.json  test-doc.md  tsconfig.json  tsup.config.ts  vercel.json  vitest.config.ts
apps/api/api/: index.js  index.ts
apps/api/src/: app.ts  config.ts  server.ts
apps/blogs/: README.md  metadata.json  next.config.ts  package.json  vercel.json
apps/docs/: package.json  vercel.json
apps/mcp-stdio/: README.md  package.json  tsup.config.ts
apps/web/: .env.example  README.md  metadata.json  next.config.ts  package.json  tsconfig.tsbuildinfo  vercel.json  wrangler.json
deploy/: .gitignore  README.md
deploy/cloudrun/: .env.example  01-bootstrap.sh  02-deploy-server.sh  03-deploy-control-plane.sh  04-map-domain.sh  control-plane.config.yaml.tpl  server.config.yaml.tpl
deploy/local/: control-plane.config.yaml  docker-compose.yml  server.config.yaml
deploy/stress/: README.md  control-plane.js  mint-jwt.js  server.js
docs/: ISSUES.md  MCP_AND_AUTH_PLAN.md  PRODUCT_SPEC.md
scripts/: deploy.sh
sdks/python/: README.md  pyproject.toml
sdks/python/tests/: test_client.py  test_integration.py
sdks/python/vectorless/: __init__.py  _config.py  _http.py  _retry.py  _upload.py  async_client.py  client.py  errors.py  types.py
src/app/: global.css
src/lib/: layout.shared.tsx
(+182 files in other folders)
