[project]
name = "vectorless"
version = "0.1.0"
description = "Official Python SDK for Vectorless — document retrieval for the reasoning era"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Vectorless", email = "sdk@vectorless.store" }]
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["vectorless", "document-retrieval", "rag", "llm", "ai", "sdk"]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://vectorless.store"
Documentation = "https://docs.vectorless.store"
Repository = "https://github.com/hallelx2/vectorless"
Issues = "https://github.com/hallelx2/vectorless/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vectorless"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
